--- a/index.html
+++ b/index.html
@@ -3,11 +3,123 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Privacy Policy</title>
+  <title>Privacy Policy - TechnoFit</title>
+  <style>
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
+      line-height: 1.6;
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 20px;
+      color: #333;
+    }
+    h1 {
+      color: #2c3e50;
+      border-bottom: 3px solid #3498db;
+      padding-bottom: 10px;
+    }
+    h2 {
+      color: #34495e;
+      margin-top: 30px;
+    }
+    .last-updated {
+      color: #7f8c8d;
+      font-style: italic;
+      margin-bottom: 30px;
+    }
+    .contact-info {
+      background: #ecf0f1;
+      padding: 15px;
+      border-radius: 5px;
+      margin-top: 30px;
+    }
+  </style>
 </head>
 <body>
-  <h1>Privacy Policy</h1>
-  <p>Your privacy is important to us. We do not collect or share any personal data...</p>
-  <!-- Add your full policy here -->
+  <h1>Privacy Policy for TechnoFit</h1>
+  <p class="last-updated">Last Updated: December 4, 2025</p>
+
+  <h2>Introduction</h2>
+  <p>TechnoFit ("we," "our," or "the app") is committed to protecting your privacy. This Privacy Policy explains how we handle information when you use our AI-powered fitness coaching application.</p>
+
+  <h2>Information We Collect</h2>
+  
+  <h3>Camera and Pose Detection Data</h3>
+  <p>TechnoFit uses your device's camera to perform real-time pose detection and form analysis. All camera processing happens <strong>locally on your device</strong>. We do not transmit, upload, store, or share any camera footage or video data to external servers. The camera data is used exclusively for real-time exercise tracking and is immediately discarded after processing.</p>
+
+  <h3>Workout Data</h3>
+  <p>The app stores the following workout-related information locally on your device:</p>
+  <ul>
+    <li>Exercise types performed (push-ups, squats, planks, etc.)</li>
+    <li>Repetition counts and form scores</li>
+    <li>Workout history and progress analytics</li>
+    <li>Performance metrics and timestamps</li>
+  </ul>
+  <p>This data remains on your device and is used solely to provide you with personalized feedback and progress tracking.</p>
+
+  <h3>Device Information</h3>
+  <p>We may collect basic technical information such as device type, operating system version, and app version to ensure compatibility and improve app performance. This information does not identify you personally.</p>
+
+  <h2>How We Use Your Information</h2>
+  <p>All information collected by TechnoFit is used exclusively to:</p>
+  <ul>
+    <li>Provide real-time rep counting and form analysis</li>
+    <li>Track your workout progress and performance</li>
+    <li>Deliver personalized feedback and voice guidance</li>
+    <li>Improve app functionality and user experience</li>
+    <li>Ensure the app works properly on your device</li>
+  </ul>
+
+  <h2>Data Storage and Security</h2>
+  <p>Your workout data is stored locally on your device using secure storage mechanisms. We implement appropriate technical measures to protect your information from unauthorized access, alteration, or destruction.</p>
+  <p><strong>Important:</strong> Because data is stored locally, uninstalling the app will delete all your workout history and progress data. We recommend backing up important data if needed.</p>
+
+  <h2>Data Sharing and Third Parties</h2>
+  <p>We do not sell, trade, rent, or share your personal information with third parties. TechnoFit does not transmit your camera footage, workout data, or any personally identifiable information to external servers or third-party services.</p>
+
+  <h2>AI and Machine Learning</h2>
+  <p>TechnoFit uses advanced machine learning models for pose detection and form analysis. These models run entirely on your device. No training data derived from your workouts is collected or used to improve our models without your explicit consent.</p>
+
+  <h2>Offline Functionality</h2>
+  <p>TechnoFit works offline after initial setup. The app does not require an internet connection to function, and no data is transmitted over the internet during normal use.</p>
+
+  <h2>Children's Privacy</h2>
+  <p>TechnoFit is not intended for children under the age of 13. We do not knowingly collect personal information from children under 13. If you are a parent or guardian and believe your child has provided us with personal information, please contact us.</p>
+
+  <h2>Your Rights and Choices</h2>
+  <p>You have full control over your data:</p>
+  <ul>
+    <li><strong>Access:</strong> View your workout history and progress data within the app</li>
+    <li><strong>Delete:</strong> Clear your workout history at any time through app settings</li>
+    <li><strong>Camera Access:</strong> Revoke camera permissions through your device settings (note: this will prevent the app from functioning properly)</li>
+  </ul>
+
+  <h2>Changes to This Privacy Policy</h2>
+  <p>We may update this Privacy Policy from time to time. Any changes will be posted within the app and on this page with an updated "Last Updated" date. We encourage you to review this policy periodically.</p>
+
+  <h2>Data Retention</h2>
+  <p>Your workout data is retained locally on your device until you delete it manually or uninstall the app. We do not retain any data on external servers.</p>
+
+  <h2>International Users</h2>
+  <p>TechnoFit processes all data locally on your device. If you use the app outside your home country, the same privacy protections apply.</p>
+
+  <h2>California Privacy Rights (CCPA)</h2>
+  <p>If you are a California resident, you have the right to know what personal information we collect and how it is used. Since TechnoFit processes all data locally and does not share information with third parties, no personal information is sold or disclosed for business purposes.</p>
+
+  <h2>European Users (GDPR)</h2>
+  <p>If you are located in the European Economic Area (EEA), you have certain rights under the General Data Protection Regulation (GDPR). Since all data processing occurs locally on your device and no personal data is transmitted to us, most GDPR provisions regarding data controllers do not apply. However, you retain full control over your data through the app's settings.</p>
+
+  <div class="contact-info">
+    <h2>Contact Us</h2>
+    <p>If you have any questions, concerns, or requests regarding this Privacy Policy or how we handle your information, please contact us at:</p>
+    <p><strong>Email:</strong> [Your Contact Email]</p>
+    <p><strong>App Name:</strong> TechnoFit</p>
+  </div>
+
+  <hr style="margin: 40px 0; border: none; border-top: 1px solid #ddd;">
+  
+  <p style="font-size: 14px; color: #7f8c8d; text-align: center;">
+    By using TechnoFit, you acknowledge that you have read and understood this Privacy Policy.
+  </p>
 </body>
 </html>
