[design] added email for  contact

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
   <div class="contact-info">
     <h2>Contact Us</h2>
     <p>If you have any questions, concerns, or requests regarding this Privacy Policy or how we handle your information, please contact us at:</p>
-    <p><strong>Email:</strong> [Your Contact Email]</p>
+    <p><strong>Email:</strong> jason.rgd@gmail.com</p>
     <p><strong>App Name:</strong> TechnoFit</p>
   </div>
 
